First route done

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Calendar</title>
-        <link rel="stylesheet/less" type="text/css" href="css/style.less">
+        <link rel="stylesheet" href="css/style.css">
         
         <script src="libs/jquery.js"></script>
         <script src="libs/underscore.js"></script>
         <script src="libs/backbone.js"></script>
         <script src="libs/mediator.js"></script>
-        <script src="libs/less.js"></script>
         
         <script src="events.js"></script>
         <script src="resources.js"></script>
